<resources>
    <string name="app_name">Quizlet</string>
    <string name="app_title" translatable="false">QuApp</string>
    <string name="app_login_email_example" translatable="false">fake@mail.com</string>
    <string name="app_login_email_description">Email:</string>
    <string name="app_login_password_example" translatable="false">*******</string>
    <string name="app_login_pw_description">Password:</string>
    <string name="app_login_button">Login</string>
    <string name="app_login_register">Register</string>
    <string name="app_start_play_button">Play</string>
    <string name="app_start_exit_button">Exit</string>
    <string name="app_start_layout_start_button" translatable="false">Layout_Start</string>
    <string name="app_start_layout_plus_button" translatable="false">Layout_Plus</string>
    <string name="app_start_layout_profile_button" translatable="false">Layout_Profile</string>
    <string name="app_start_layout_highscore_button" translatable="false">Layout_Highscore</string>
    <string name="app_start_layout_settings_button" translatable="false">Layout_Settings</string>
    <string name="app_play_title">Play</string>
    <string name="toast_language_change">Language has been changed.</string>
    <string name="toast_wrong_answer">Wrong answer</string>
    <string name="text_view_score">Score</string>
    <string name="score_play_again">Play Again</string>
    <string name="wrong_email_password">Wrong email and password!</string>
    <string name="invalid_email_password">Invalid email or password or the User is already registered</string>
    <string-array name="app_start_add_question_category">
        <item>Science</item>
        <item>Games</item>
    </string-array>
    <string name="text_view_add_Question">Add a question!</string>
    <string name="app_start_add_question_question_Hint">Enter your question here!</string>
    <string name="app_start_add_question_right_answer_hint">Enter your right answer here!</string>
    <string name="app_start_add_question_wrong_answer_hint">Enter one of the wrong answers here!</string>
    <string name="app_start_add_question_submit">Save question</string>
    <string name="app_start_add_question_error">At least one field is empty</string>
    <string name="app_loading_text">Loading questions</string>
    <string name="app_account_button">Account</string>
    <string name="text_view_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_start_account_email">Email</string>
    <string name="app_start_total_questions">Total amount of questions</string>
    <string name="app_start_count_of_categories">Total amount of categories</string>
</resources>