<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <Button
        android:id="@+id/button_start"
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_start_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_account"
        android:layout_width="354dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_account_button"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start"
        app:layout_constraintVertical_bias="0.964" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginTop="108dp"
        android:text="@string/app_start_exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

</androidx.constraintlayout.widget.ConstraintLayout>